fix scrollbar for browsers not supportin alpha on scrollers

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,7 +41,7 @@
 /* Works on Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: rgb(107, 107, 116) rgba(255, 255, 255, 0);
+  scrollbar-color: rgb(107, 107, 116) rgb(255, 255, 255);
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -54,7 +54,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgb(255, 255, 255);
   border-radius: 20px;
   border: 3px solid rgb(107, 107, 116);
 }
